# accruvia-harness

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  CONTROL-PLANE-PLAN.md  ENGINEERING_CHECKLIST.md  Makefile  OPERATOR_RUNBOOK.md  PRODUCT_PLAN.md  README.md  REFACTORING_PLAN.md  SKILLS_MIGRATION_PLAN.md  docker-compose.temporal.yml  pyproject.toml
docs/: api-spec.yaml
frontend/: index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
scripts/: collect_evidence.py
specs/: atomic-plan-schema.md  atomic-plan-validator.md  atomicity-gate.md  atomicity-telemetry.md  context-control-model.md  context-management-service.md  lessons-learned.md  mermaid-red-team.md  objective-ui-redesign.md  openclaw-observer.md  plan-refinement-loop.md  plan-to-task-mapping.md  product-architecture.md  routellect-extraction.md  split-phase-execution.md  ui-responder-context.md
tests/: __init__.py  conftest.py  path_bootstrap.py  test_atomic_decomposition_skill.py  test_bench.py  test_chaos.py  test_cli.py  test_cognition.py  test_cognition_heartbeat_skill.py  test_control_plane.py  test_cost_tracker.py  test_decision_service.py  test_engine.py  test_evidence_collector.py  test_feedback_loop.py  test_github.py  test_gitlab.py  test_interrogation.py  test_interrogation_skill.py  test_llm_e2e.py  test_merge_gate.py  test_mermaid_render.py  test_mermaid_update_proposal_skill.py  test_model_inventory.py  test_objective_lifecycle.py  test_objective_review_orchestrator.py  test_observer.py  test_onboarding.py  test_parallel.py  test_phase1.py  test_runtime.py  (+26 more)
(+230 files in other folders)
